--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,33 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+
+      services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: 123456
+          POSTGRES_DB: simple_bank
+        ports: 
+        - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
-    - uses: actions/checkout@v3
+    - name: checkout code into the Go mode repository 
+      uses: actions/checkout@v3
+    
+    - name : install golang-migrate
+      uses: |
+        curl -L https://github.com/golang-migrate/migrate/releases/download/v4.16.2/migrate.linux-amd64.tar.gz | tar xvz
+       sudo mv migrate.linux-amd64 /usr/bin/migrate
+       which migrate
+
+      - name : create db
+        uses: make migrateup
 
     - name: Set up Go
       uses: actions/setup-go@v4
