fix bug cmd connect db

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,9 +9,10 @@ on:
 jobs:
 
   test:
+    name : test
     runs-on: ubuntu-latest
 
-      services:
+    services:
       postgres:
         image: postgres
         env:
