--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,20 +29,20 @@ jobs:
     steps:
     - name: checkout code into the Go mode repository 
       uses: actions/checkout@v3
-    
-    - name : install golang-migrate
-      uses: |
-        curl -L https://github.com/golang-migrate/migrate/releases/download/v4.16.2/migrate.linux-amd64.tar.gz | tar xvz
-       sudo mv migrate.linux-amd64 /usr/bin/migrate
-       which migrate
-
-      - name : create db
-        uses: make migrateup
 
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
         go-version: '1.20'
+    
+    - name : install golang-migrate
+      run: |
+        curl -L https://github.com/golang-migrate/migrate/releases/download/v4.16.2/migrate.linux-amd64.tar.gz | tar xvz
+        sudo mv migrate.linux-amd64 /usr/bin/migrate
+        which migrate
+
+    - name : create db
+      run: make migrateup
 
     - name: Test
       run: make test
