--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,13 +19,14 @@ jobs:
           POSTGRES_USER: root
           POSTGRES_PASSWORD: 123456
           POSTGRES_DB: simple_bank
-        ports: 
-        - 5432:5432
+          POSTGRES_HOST: localhost
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+        ports: 
+        - 5432:5432
     steps:
     - name: Set up Go
       uses: actions/setup-go@v4
