--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         image: postgres:latest
         env:
           POSTGRES_USER: root
-          POSTGRES_PASSWORD: 123456
+          POSTGRES_PASSWORD: "123456"
           POSTGRES_DB: simple_bank
         ports:
           - 5432:5432
