--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,9 @@ jobs:
         curl -L https://github.com/golang-migrate/migrate/releases/download/v4.16.2/migrate.linux-arm64.tar.gz | tar xvz
         sudo mv migrate /usr/bin/migrate
         which migrate
+    
+    - name : test migrate
+      run : migrate -help
 
     - name : create db
       run: make migrateup
