--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -11,3 +11,4 @@ sql:
         emit_prepared_queries: false
         emit_interface: false
         emit_exact_table_names: true
+        emit_empty_slices: true
