--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -9,6 +9,5 @@ sql:
         out: "./db/sqlc"
         emit_json_tags: true
         emit_prepared_queries: false
-        emit_interface: true
-        emit_exact_table_names: false
-        emit_empty_slices: true
+        emit_interface: false
+        emit_exact_table_names: true
